# app-next-tutorial

./: README-Deployment.md  README.md  mise.toml
backend/: README.md  assignments.py  decoders.py  knapsack.py  main.py  pyproject.toml  solver.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/assignment/: page.tsx
frontend/app/knapsack/: page.tsx
frontend/components/layout/: BackendStatus.tsx  Header.tsx  MainContainer.tsx  ThemeToggle.tsx
frontend/components/solver/: AssignmentForm.tsx  ConstraintTable.tsx  EnergyHistogram.tsx  KnapsackForm.tsx
frontend/lib/: api.ts
